--- a/index.html
+++ b/index.html
@@ -13,16 +13,33 @@
     <link rel="stylesheet" href="style.css">
 
 
+
+
+
+
 </head>
 
 <body>
-    <nav class="my_nav navbar bg-body-tertiary">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="34">
-            </a>
+
+    <div class="nav d-flex justify-content-center">
+        <img src="sparta_movie.png" style="width:800px; height:480px" />
+    </div>
+    <div class="text-center mb-5">
+        <input id="input_movie" />
+        <button id="bt_search">검색</button>
+    </div>
+    <!-- 카드 start-->
+    <div class="container text-center">
+        <div id="main_card" class="row">
+
         </div>
-    </nav>
+
+    </div>
+    <!-- 카드 end-->
+
+
+
+    <script type="text/javascript" src="main.js"></script>
 </body>
 
 </html>
