--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 
@@ -22,11 +25,20 @@
 <body>
 
     <div class="nav d-flex justify-content-center">
-        <img src="sparta_movie.png" style="width:800px; height:480px" />
+        <img src="sparta_movie.png" style="width:800px; height:480px; margin-right: 40px;" />
     </div>
-    <div class="text-center mb-5">
-        <input id="input_movie" />
-        <button id="bt_search">검색</button>
+    <p style="color: white; text-align: center; margin-right: 50px;">Made by LSW</p>
+    <div style="flex-direction: column; align-items: center;" class="d-flex justify-content-center mb-5">
+
+        <div style="margin-right:260px;" class="main_input mb-5 ">
+            <input id="input_movie" type="text" required>
+            <label class="gugi-regular ">영화 제목을 입력해주세요</label>
+            <span></span>
+        </div>
+        <button style="width:100px; margin-right:50px;" id="bt_search" type="button"
+            class="btn btn-outline-light ">검색</button>
+
+
     </div>
     <!-- 카드 start-->
     <div class="container text-center">
